@@ -1,4 +1,14 @@
+Mon Mar 20 10:08:17 1995  Jeff Law  (law@snake.cs.utah.edu)
+
+	* gdb.base/recurse.exp: Update gdb_test invocation to use new
+	conventions and slightly simplify the matching regexp.
+
 Fri Mar 17 05:43:28 1995  Jim Kingdon  (kingdon@lioth.cygnus.com)
+
+	* gdb.base/break.exp: Update gdb_test invocation to use new
+	convention.
+
+	* lib/gdb.exp: If noargs is not set, set it to 0.
 
 	* gdb.base/nodebug.exp: Comment out redundant test.  Make name of
 	tests unique.
